--- a/views/index.pug
+++ b/views/index.pug
@@ -2,7 +2,8 @@ doctype html
 html
   head
     meta(charset='utf-8')
-    title Make Asynchronous Requests
+    title Text Analyzer
+    link(href='/images/analysis.png', rel='shortcut icon')
     meta(name='viewport', content='width=device-width, initial-scale=1')
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js')
     script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js')
