--- a/views/index.pug
+++ b/views/index.pug
@@ -15,7 +15,7 @@ html
     .row-fluid
       header: h1#page-header IBM Bluemix Tone Analyzer
       .col-sm-5
-        form#input-text-form(onsubmit='return false')
+        form.head-room#input-text-form(onsubmit='return false')
           .form-group
             label(for='input-text' style='color: white;') Add some text:
             textarea.form-control#input-text(rows='12')
