Add link to source code repo on Github.

--- a/views/index.pug
+++ b/views/index.pug
@@ -31,6 +31,8 @@ html
         .row.head-room.foot-room
           h3.chart-header Social Tone
           .ct-chart#chart3
+    .row-fluid
+      p Source: https://github.com/tadorsey735/watson-tone-analyzer
     script(src='/js/chartist.min.js')
     script(src='/js/index.js')
     script.
