--- a/views/index.pug
+++ b/views/index.pug
@@ -32,7 +32,9 @@ html
           h3.chart-header Social Tone
           .ct-chart#chart3
     .row-fluid
-      p Source: https://github.com/tadorsey735/watson-tone-analyzer
+      p#source-link Source code
+        a(href='https://github.com/tadorsey735/watson-tone-analyzer') here
+        span .
     script(src='/js/chartist.min.js')
     script(src='/js/index.js')
     script.
